# pyrexia-stat

./: .gitignore  README.md  action.py  control.py  db.pyrexia  dblib.py  error.py  init_db.py  irelay.py  isensor.py  mode.py  null_sensor_hook.py  package-lock.json  package.json  program.py  pyproject.toml  relay.py  rest.py  sensor.py  sensor_demo.py  sensorpush.py  server.js  setup.py  setup_database.py  setup_token.py  start.sh  swaggerdef.json  thermostat.out  thermostat.py  utils.py
middleware/: auth.js
routes/: .setup.js.swp  controls.js  history.js  programs.js  sensors.js  setup.js  stat.js  users.js
src/pyrexia/: __main__.py  config.py  control.py  dht_sensor_hook.py  null_sensor_hook.py  program.py  relay.py  rest.py  sensor.py  sensor_hook.py  sp_sensor_hook.py  start.sh
src/pyrexia-stat/: bledevice.py  config.py  control.py  database.js  dht_sensor_hook.py  null_sensor_hook.py  package-lock.json  package.json  relay.py  rest.py  sensor.py  sensor_hook.py  server.js  setup.py  sp_sensor_hook.py  start.sh  thermostat.py
src/pyrexia-stat/middleware/: auth.js
src/pyrexia-stat/routes/: controls.js  history.js  sensors.js  users.js
src/thermostat/: config.py  relay.py  rest.py  sensor.py
