[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrexia-stat"
version = "0.9.0"
authors = [
    { name="Edward McGrath", email="edward@edwardmcgrath.com" },
]
description = "Thermostat runs on raspberry pi"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cryptomcgrath/pyrexia-stat"

